Updated Employee Page

--- a/CyberTutorial.WebApp/Views/AboutUs/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/AboutUs/Index.cshtml
@@ -2,21 +2,33 @@
     ViewData["Title"] = "About Us";
 }
 
-<div class="container mt-5">
+<div class="container">
     <div class="row">
         <div class="col">
-            <p class="text-white display-3 fw-bold">Our Story</p>
+            <p class="text-white display-4">Vision</p>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-7 col-auto pt-2">
+        <div class="col-lg-8 col-auto pt-1">
+            <p class="text-white fs-6 fw-normal">
+                To become an outstanding world-class cyber awareness trainers to change employee cyber behavior.
+            </p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <p class="text-white display-4">Our Story</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-7 col-auto pt-1">
             <p class="text-white fs-6 fw-normal">
                 Ambitious higher college of technology students who have high hopes for the future in raising cyber security awareness to protect organizations from the latest incidents caused by human error.
             </p>
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-7 col-auto pt-2">
+        <div class="col-lg-7 col-auto pt-1">
             <p class="text-white fs-6 fw-normal">
                 We had to solve a problem for our graduation project. we decided to create a platform, to help employees know their capabilities and weaknesses in cyber security,
                 Security awareness for employees is the most important thing that can be provided to them to avoid any danger that occurs.
@@ -24,20 +36,43 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-lg-7 pt-2">
+        <div class="col-lg-7 col-auto pt-1">
             <p class="text-white fs-6 fw-normal">
                 Our end-to-end corporate cyber security training platform is driven by data science and is proven to change employee behavior, decrease employee high-risk groups by 82%.   
             </p>
         </div>
     </div>
     <div class="row">
-        <div class="col pt-2">
-            <p class="text-white display-3 fw-bold">How It Works</p>
+        <div class="col pt-1">
+            <p class="text-white display-4">How It Works</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-lg-12 col-auto pt-1">
+            <ul class="text-white fs-6 fw-normal">
+                <li>Answer ten questions and test your organization's level of knowledge.</li>
+                <li>Cyber tutorials recommend suggested training content based on your answers.</li>
+                <li>We will contact you to get your program started.</li>
+                <li>Easily export detailed and executive reports PDF versions of your employee progression.</li>
+                <li>Get access to a large security awareness training library with the latest updated content.</li>
+                <li>Get a fully mature awareness program ready in 5 minutes.</li>
+            </ul>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col pt-1">
+            <p class="text-white display-4">Features</p>
         </div>
     </div>
     <div class="row">
         <div class="col-lg-7 pt-2">
-
+            <ul class="text-white fs-6 fw-normal">
+                <li>Customized content</li>
+                <li>Aligns with INSIMA</li>
+                <li>Frequently updated content</li>
+                <li>Well-constructed content</li>
+                <li>Increase employee resilience score by 5x in months of training</li>
+            </ul>
         </div>
     </div>
 </div>
