--- a/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
+++ b/CyberTutorial.WebApp/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
         </nav>
     </header>
 
-    <main class="mt-5 pt-3">
+    <main class="mt-5 mb-5 pt-5">
         <div class="container-fluid">
             @RenderBody()
         </div>
