--- a/CyberTutorial.WebApp/Views/Employee/Index.cshtml
+++ b/CyberTutorial.WebApp/Views/Employee/Index.cshtml
@@ -143,8 +143,8 @@
             </div>
             <div class="card-body">
                 <div class="table-responsive">
-                    <table id="example"
-                           class="table table-striped data-table table-light"
+                    <table id="TopEmployeesTable"
+                           class="table table-striped table-light"
                            style="width: 100%">
                         <thead>
                             <tr>
