--- a/CyberTutorial.WebApp/Views/Employee/Quizzes/AttemptedQuizzes.cshtml
+++ b/CyberTutorial.WebApp/Views/Employee/Quizzes/AttemptedQuizzes.cshtml
@@ -1,5 +1,52 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<AttemptModel>
+
 @{
+    ViewData["Title"] = "Attempted Quizzes";
 }
+
+@section Scripts
+{
+    <script src="~/js/employee/quizzes-emp.js" asp-append-version="true"></script>
+}
+
+<div class="row ps-3 pt-3 pe-3">
+    <div class="col-md-12">
+        <div class="card bg-dark text-white">
+            <div class="card-header">
+                <span><i class="fa-solid fa-fw fa-table me-2"></i></span>
+                <p class="modal-title d-inline p-0">Attempted Quizzes</p>
+            </div>
+            <div class="card-body">
+                <div class="table-responsive">
+                    <table id="AttemptedQuizzesTable" class="table table-bordered table-light" style="width: 100%">
+                        <thead>
+                            <tr>
+                                <th>Id</th>
+                                <th>Quiz Name</th>
+                                <th>Started At</th>
+                                <th>Completed At</th>
+                                <th>Score</th>
+                                <th>Total Correct Answers</th>
+                                <th>Total Incorrect Answers</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @foreach (AttemptModel attempt in Model)
+                            {
+                                <tr>
+                                    <td>@attempt.AttemptId</td>
+                                    <td>@attempt.QuizName</td>
+                                    <td>@attempt.StartedAt</td>
+                                    <td>@attempt.CompletedAt</td>
+                                    <td>@attempt.Score</td>
+                                    <td>@attempt.TotalCorrectAnswers</td>
+                                    <td>@attempt.TotalIncorrectAnswers</td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
